wayland-xdg-shell: Handle the wl_output on the set_fullscreen request

This makes us fullscreen wayland windows on the requested monitor.

https://bugzilla.gnome.org/show_bug.cgi?id=772525